--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
       <version>7.0.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.18</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
