--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
       <version>1.18.18</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-testng</artifactId>
+      <version>2.13.8</version>
+    </dependency>
+
   </dependencies>
 
   <build>
